--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="row">
       <div class="col-12 content">
         <center>
-          <h4>Coming soon. Subscribe for email notifications of future updates.</h4>
+          <h4>Coming soon.</h4>
         </center>
       </div>
     </div>
