--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     <div class="row">
       <div class="col-12">
         <center>
-              <p class="siinmedia">
-       
-    </p>
+          <img src="./img/logo.png" class="mr-3" width="250px" height="25px">
         </center>
       </div>
     </div>
