--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="col-12">
         <center>
-          <img src="./img/logo.png" class="mr-3" width="250px" height="25px">
+          <img src="logo.png" class="mr-3" width="250px" height="25px">
         </center>
       </div>
     </div>
